[4292]Added some comments

--- a/readme.textile
+++ b/readme.textile
@@ -157,6 +157,18 @@ After checking out the repo, run `bin/setup` to install dependencies. Then, run 
 
 To install this gem onto your local machine, run `bundle exec rake install`. To release a new version, update the version number in `version.rb`, and then run `bundle exec rake release`, which will create a git tag for the version, push git commits and tags, and push the `.gem` file to [rubygems.org](https://rubygems.org).
 
+h2. utilities
+
+* install_all.rb allows you to build all Elexis projects locally. It patches on the fly the main pom.xml, ch.elexis.target/juno-target.target and ch.medelexis.p2site/update_mirror.xml, to build following projects in this order
+** elexis.3rdparty.libraries
+** mirror.4.elexis
+** elexis-3-core
+** elexis-3-base
+** medelexis-3-application (proprietary)
+** medelexis-3 (proprietary)
+
+HINT: If you have no access to the repositories medelexis-3-application or medelexis-3, then uncomment the corresponding lines in repos.rb
+
 h2. Contributing
 
 Bug reports and pull requests are welcome on GitHub at https://github.com/ngiger/elexis-releng.
